--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@ body {
 .card {
     width: 90%;
     max-width: 470px;
-    background: linear-gradient(135deg, #00feba, #5b548a);
+    min-width: 400px;
+    background: linear-gradient(135deg, black, grey);
     color: white;
     margin: 100px auto 0;
     border-radius: 20px;
@@ -63,20 +64,42 @@ body {
     width: 15px;
     height: 15px;
 }
+.weather .main-img {
+    width: 100px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+.loading-animation {
+    display: none;
+    width: 40px;
+    height: 40px;
+    margin-top: 40px;
+    border: 4px solid  white;
+    border-top: 4px solid black;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
  .weather .weather-icon {
+    display: none;
     width: 100px;
     margin-top: 40px;
 }
 
-.weather h1 {
+.weather .temp {
     font-size: 4.5rem;
     font-weight: 500;
     margin-top: 40px;
 }
 
-.weather h2 {
-    font-size: 2.5rem;
+.weather .location {
+    font-size: 2rem;
     font-weight: 400;
 }
 
